--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ You glance at their kits. &quot;Guns greased up?&quot;
 
 (if: $captainMyCaptain is false)[ [[go talk to someone else]] ] ] </tw-passagedata><tw-passagedata pid="7" name="answer in English" tags="" position="2325,1300" size="100,100">&quot;Sure, I&#39;ve got plenty. (if: $leeWarning &gt;= 1)[You have a preference, Sergeant Lee?](else:)[Do you have a preference...&quot; you trail off, pausing to look at his name badge. &quot;Sergeant Lee?&quot;]
 
-&quot;So you know just enough of the language to distinguish the coffin nails, huh. A man after my own heart,&quot; Lee deadpans. &quot;You got any Marlboros, Diaz?&quot;
+&quot;So you know just enough of the language to distinguish the coffin nails, huh. A man after my own heart,&quot; Lee deadpans. &quot;You got any Reds, Diaz?&quot;
 
 [[teasing]]
 
@@ -249,7 +249,7 @@ You pat his arm, too, your Korean skills feeling bolstered.
 
 &quot;Hmm. Color me impressed,&quot; Lee mumbles, giving you a second look-over. &quot;Not many guys like you care enough to learn the language.&quot;
 
-He switches back to English. &quot;How about Marlboros?&quot;
+He switches back to English. &quot;How about Reds?&quot;
 
 [[teasing]]
 
@@ -439,7 +439,7 @@ One of his companions giggles.
 
 &quot;Mary help us,&quot; you sigh under your breath. &quot;And what would that be?&quot;
 
-&quot;Mary ain&#39;t helping any of us, champ. You got Marlboros?&quot;
+&quot;Mary ain&#39;t helping any of us, champ. You got Reds?&quot;
 
 (if: $leeWarning &gt;= 2)[ [[teasing]] ](else:)[(...locked...)]
 [[neutral]]</tw-passagedata><tw-passagedata pid="41" name="neutral" tags="" position="2425,1575" size="100,100">&quot;No. I&#39;ve got Luckies, though.&quot; 
